syntax = "proto3";

option csharp_namespace = "grpcMessageServer";

package message;

service Message {

  rpc SendMessage(MessageRequest) returns (stream MessageResponse); // dönüþ deðeri için veri tipinden önce stream anahtar kelimesi kullanýlýrsa ilgili verini server stream yapýlacaðý anlamýna gelir

}

message MessageRequest {
  string name = 1;
  string message = 2;
}

message MessageResponse {
  string message = 1;
}
